# SwiftySyncAuthorization

./: .gitignore  .gitmodules  .travis.yml  Authorization.h  Authorization.hpp  CMakeLists.txt  FacebookAuthorization.cpp  FacebookAuthorization.h  FacebookAuthorization.hpp  GoogleAuthorization.cpp  GoogleAuthorization.h  GoogleAuthorization.hpp  SwiftySyncAuthorization.sln  SwiftySyncAuthorization.vcxproj  SwiftySyncAuthorization.vcxproj.filters  Usage.h  main.cpp  vcpkg.json
SwiftySyncAuthorization.xcodeproj/: project.pbxproj
SwiftySyncAuthorization.xcodeproj/project.xcworkspace/xcuserdata/evgenij.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftySyncAuthorization.xcodeproj/xcuserdata/evgenij.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: Authorization.hpp  FacebookAuthorization.hpp  GoogleAuthorization.hpp
src/: FacebookAuthorization.cpp
test/: test.cpp
